# edge-assistant

./: .env.example  .gitignore  AGENT_ORCHESTRATION_PLAN.md  CLAUDE.md  CLI-GUIDE.md  PYCONDUCTOR_USAGE_GUIDE.md  README.md  STARTER.MD  debug_env.py  pyproject.toml
.claude/: DEVELOPMENT.md  database-schema.md  settings.json
.claude-backup/: settings.local.json
.claude-backup/agents/: WORKFLOW_EXAMPLES.md  azure-devops-specialist.md  code-auditor.md  deployment-manager.md  integration-manager.md  performance-auditor.md  price-analyst.md  svelte-storybook.md  svelte-testing.md
.claude-backup/commands/: CREATE_COMMAND.md  add-agent-cli.md  create-dev-agents.md  deploy-prod.md  implement-agent-framework.md  prime.md  setup-agent-dev-env.md
.claude/agents/: README.md  architecture-auditor.md  coder.md  documenter.md  orchestrator.md  project-architect.md  release-manager.md  researcher.md  reviewer.md  scraper-debugger.md  security-auditor.md  strategic-analyst.md  svelte-development.md  test-engineer.md  tester.md
.claude/commands/: background.md  design-agent-ui.md  filter-page.md  health.md  implement.md  loadbundle.md  price-report.md  prime-debug.md  prime-implement.md  prime-research.md  prime-review.md  review.md  scrape-all.md  test-agent-workflows.md  track.md
.claude/hooks/: activity-logger.py  (+10 more)
docs/: storage-specification.md
edge_assistant/: cli.py  engine.py  state.py
edge_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: activity.jsonl  coordination.jsonl  task-log.ndjson  tasks.jsonl
scripts/: run_cli_in_venv.sh
(+98 files in other folders)
